Login Page added

--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,3 +1,3 @@
 <div class="background">
-    <h1 style="color: whitesmoke;">Contact Us on <a href="https://mail.google.com" target="_blank">langotegouri@gmail.com</a></h1>
+    <h1 style="color: whitesmoke;">Contact Us on <a href="https://mail.google.com" target="_blank">langotegouri&#64;gmail.com</a></h1>
 </div>
